<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Jan-Lukas Else
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Passwy</string>
    <string name="phrase">Phrase</string>
    <string name="phrase_rep">Phrase again (optional)</string>
    <string name="copy">Copy to clipboard</string>
    <string name="copied">Copied to clipboard</string>
    <string name="show">Generate</string>
    <string name="desc">Passwy will turn any phrase into a secure password</string>
    <string name="chars">Use special characters</string>
    <string name="pwlen">Password length</string>
    <string name="hide">Hide</string>
    <string name="phr_doesnt_match">Phrases doesn\'t match!</string>
    <string name="enter_length">Please enter the length!</string>
    <string name="licenses">Licenses</string>

</resources>
