<!--
  ~ Copyright 2015 Jan-Lukas Else
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/desc"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phrase"
                android:inputType="textPassword"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pwrep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phrase_rep"
                android:inputType="textPassword"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pwlen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwlen"
                android:inputType="number"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_chars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chars" />

        <Button
            android:id="@+id/button_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_margin"
            android:visibility="gone"
            app:indicator="BallGridPulse"
            app:indicator_color="@color/accent" />
    </LinearLayout>
</ScrollView>